FIX: flex container styling and overflow moain content container

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --font-color: #C87B23;
 }
 
+div#root{
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -30,7 +34,7 @@ body {
 
 .container{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   background: var(--background-color);
 }
