--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -1,10 +1,10 @@
 .main-content-container{
     width: 100%;
-    height: 100%;
     flex: 7 0;
     background: var(--background-color);
     display: flex; 
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: flex-start;
+    overflow: auto;
 }
